--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | NFT preview card component</title>
-</head>
-<body>
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+     <head>
+          <meta charset="UTF-8" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+          <link rel="stylesheet" href="style.css" />
+          <link rel="preconnect" href="https://fonts.googleapis.com" />
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+          <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+          <title>Frontend Mentor | NFT preview card component</title>
+     </head>
+     <body>
+          <main class="nft-box">
+               <div class="nft-photo">
+                    <img src="images/image-equilibrium.jpg" alt="clear cube with multicolored light on one point in dark blue background" class="nft-cube" />
+               </div>
+               <div class="nft-details">
+                    <h1>Equilibrium #3429</h1>
+                    <p class="nft-collection-info">Our Equilibrium collection promotes balance and calm.</p>
+                    <div class="nft-stats">
+                         <div class="etherium">
+                              <img src="images/icon-ethereum.svg" class="etherium-icon" />
+                              <p>0.041 ETH</p>
+                         </div>
+                         <div class="time-left">
+                              <img src="images/icon-clock.svg" class="clock-icon" />
+                              <p>3 days left</p>
+                         </div>
+                    </div>
+                    <div class="creator-info">
+                         <div>
+                              <img src="images/image-avatar.png" alt="headshot of Jules Wyvern" class="creator-pic" />
+                         </div>
+                         <div class="creator">
+                              <p>Creation of <a class="creator-name">Jules Wyvern</a></p>
+                         </div>
+                    </div>
+               </div>
+          </main>
+     </body>
 </html>
