updating overlay on nft image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <main class="nft-box">
                <div class="nft-photo">
                     <img src="images/image-equilibrium.jpg" alt="clear cube with multicolored light on one point in dark blue background" class="nft-cube" />
+                    <img src="images/icon-view.svg" alt="eye-icon" class="eye-icon" />
+                    <div class="overlay"></div>
                </div>
                <div class="nft-details">
                     <h1>Equilibrium #3429</h1>
