adding alt text for icons

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <p class="nft-collection-info">Our Equilibrium collection promotes balance and calm.</p>
                     <div class="nft-stats">
                          <div class="etherium">
-                              <img src="images/icon-ethereum.svg" class="etherium-icon" />
+                              <img src="images/icon-ethereum.svg" class="etherium-icon" alt="etherium icon" />
                               <p>0.041 ETH</p>
                          </div>
                          <div class="time-left">
-                              <img src="images/icon-clock.svg" class="clock-icon" />
+                              <img src="images/icon-clock.svg" class="clock-icon" alt="clock icon" />
                               <p>3 days left</p>
                          </div>
                     </div>
